# Diploma

./: .env.prod.example  .gitignore  README.md  TZ_frontend.md  TZ_react.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  categories.py  comments.py  crm_activity.py  notifications.py  projects.py  search.py  sprints.py  stats.py  tasks.py  websocket_chat.py
backend/app/db/: config.py
backend/app/models/: base.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  crm_hooks.py  task_access.py
backend/migrations/: add_roles_and_chat.py  crm_v2.py
frontend-react/: Dockerfile.prod  index.html  package-lock.json  package.json
frontend-react/src/: App.jsx  index.css
frontend-react/src/api/: client.js
frontend-react/src/components/: BellIcon.jsx  Button.jsx  Card.jsx  CategoryBadges.jsx  CategoryPicker.jsx  FormItem.jsx  Input.jsx  Modal.jsx  ThemeToggle.jsx
frontend-react/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend-react/src/hooks/: useClickOutside.js
frontend-react/src/layout/: AppLayout.jsx
frontend-react/src/pages/: CategoriesPage.jsx  DashboardPage.jsx  GlobalChatPage.jsx  KanbanBoardPage.jsx  LoginPage.jsx  ProjectDetailPage.jsx  ProjectsPage.jsx  (+2 more)
frontend-svelte/: Dockerfile  Dockerfile.prod  README.md  index.html  package-lock.json  vite.config.js
frontend-svelte/src/: App.svelte  app.css  main.js
frontend-vue/: Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.js
frontend-vue/src/: App.vue  main.js
(+40 files in other folders)
